--- a/style.css
+++ b/style.css
@@ -154,10 +154,29 @@ h2{
   font-weight: 400;
   color: #FFFFFF;
 }
+#about hr{
+  
+}
 #about{
   width: ;
 }
+#count-box{
+  display: flex;
+  justify-content: space-around;
+}
+.number{
+  font-size: 48px;
+  font-weight: 900;
+  color: #00FF88;
+}
+.number-title{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #FFFFFF;
 
+  
+}
 
 @media screen {
   
