--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ h2{
   
 }
      /* Why Choose TechWave */
-h3{
+.common-heading{
   color: #FFFFFF;
   text-align: center;
   font-size: 48px;
@@ -244,8 +244,100 @@ h3{
   grid-column: span 1;
   grid-row: span 1;
 }
+     /* Featured Episodes  */
 
+.video{
+  width: 380px;
+  background-color: #250D44;
+  border-radius: 15px;
+  overflow: hidden;
+}
 
+.video-details{
+
+  text-align: left;
+  padding: 20px 30px 30px 30px; 
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+#video-section{
+  background-color: #1A0B2E;
+  padding-top: 60px;
+}
+#feature{
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  padding: 50px 30px 50px 30px;
+}
+.time{
+      color: #00FF88;
+    font-size: 16px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.time img{
+  width: 15px;
+  height: 15px;
+}
+
+/* meet the host section  */
+#host-name{
+  color: #FFFFFF;
+  font-size: 32px;
+  font-weight: 700;
+
+}
+#host-container{
+  display: flex;
+  padding: 30px;
+  gap: 24px;
+  background-color: #35116540;
+  border-radius: 15px;
+  width: 1200px;
+  margin: 30px auto;
+}
+#host-description{
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+      /* footer section */
+footer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 180px 0px;
+  background: url(./media/footer-bg.png);
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+
+}
+#footer-icon{
+  display: flex;
+  gap: 40px;
+  margin: 40px auto;
+}
+.icon-img{
+  display: flex;
+  gap: 10px;
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: 500;
+}
+#copy-right{
+   color: #FAFAFA;
+  font-size: 16px;
+  font-weight: 400;
+
+}
 
 
 
